salesforce-main/src/main/default/objects/Activity/fields/Type_of_Call__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Call__c</fullName>
    <description>Dependant to Type of Activity Field

Indicates the type of call.  Validation ensures this field is populated when activity of type call is placed (for admissions team only).</description>
    <label>Type of Call</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>(In) V2V</fullName>
            </value>
            <value>
                <fullName>(Out) V2V</fullName>
            </value>
            <value>
                <fullName>(Out) LVM</fullName>
            </value>
            <value>
                <fullName>(Out) No Answer</fullName>
            </value>
            <value>
                <fullName>(Out) Invalid #</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>