salesforce-main/src/main/default/objects/Activity/fields/Type_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Type_Reporting__c</fullName>
    <label>Type(Reporting)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>