salesforce-main/src/main/default/objects/Activity/fields/Types_of_Apprenticeship_Discussed__c.field-meta.xml
<CustomField>
    <fullName>Types_of_Apprenticeship_Discussed__c</fullName>
    <description>If you discussed apprenticeship programmes, which of the following training areas did you discuss?</description>
    <label>Types of Apprenticeship Discussed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accountancy</fullName>
            </value>
            <value>
                <fullName>Actuarial</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Financial Services</fullName>
            </value>
            <value>
                <fullName>Health</fullName>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>Leadership and Management</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Technology</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>