salesforce-main/src/main/default/objects/Activity/fields/Verticals_Discussed__c.field-meta.xml
<CustomField>
    <fullName>Verticals_Discussed__c</fullName>
    <description>Which of the following verticals did you discuss with the client?</description>
    <label>Verticals Discussed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accountancy &amp; Tax</fullName>
            </value>
            <value>
                <fullName>Actuarial</fullName>
            </value>
            <value>
                <fullName>Banking/Insurance</fullName>
            </value>
            <value>
                <fullName>Financial Crime/Compliance</fullName>
            </value>
            <value>
                <fullName>Graduate Diploma in Accountancy/Wrap</fullName>
            </value>
            <value>
                <fullName>Health</fullName>
            </value>
            <value>
                <fullName>HR, Management, Other</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>Law</fullName>
            </value>
            <value>
                <fullName>Learning Media</fullName>
            </value>
            <value>
                <fullName>Postgraduate/Undergraduate</fullName>
            </value>
            <value>
                <fullName>Professional Development</fullName>
            </value>
            <value>
                <fullName>Technology Apps &amp; Other</fullName>
            </value>
            <value>
                <fullName>Technology Degree App/Masters</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>